# rqt_image_overlay

./: CMakeLists.txt  README.md  dependencies.repos  package.xml  plugin.xml  setup.py
.github/workflows/: build_and_test_foxy.yaml  build_and_test_galactic.yaml  build_and_test_humble.yaml  build_and_test_rolling.yaml
include/image_overlay/: compositor.hpp  image_manager.hpp  image_overlay.hpp  image_overlay_node.hpp  image_overlay_plugin.hpp  image_overlay_plugin_t.hpp  overlay.hpp  overlay_manager.hpp  plugin.hpp  plugin_helper.hpp  plugin_manager.hpp  ratio_layouted_frame.hpp
include/rqt_image_overlay/: compositor.hpp  image_manager.hpp  image_overlay.hpp  image_overlay_plugin.hpp  image_overlay_plugin_t.hpp  overlay.hpp  overlay_manager.hpp  ratio_layouted_frame.hpp
rqt_image_overlay/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
rqt_image_overlay/include/rqt_image_overlay/: image_overlay_plugin_t.hpp  overlay.hpp  overlay_manager.hpp
rqt_image_overlay/resource/: configuration_dialog.ui  depth_image_display_options_dialog.ui  image_overlay.ui
rqt_image_overlay/scripts/: rqt_image_overlay
rqt_image_overlay/src/: color_dialog_delegate.cpp  color_dialog_delegate.hpp  composition_frame.cpp  composition_frame.hpp  compositor.cpp  compositor.hpp  exceptions.hpp  image_manager.cpp  image_manager.hpp  image_overlay.cpp  image_overlay.hpp  image_overlay.ui  image_topic.hpp  list_image_topics.cpp  list_image_topics.hpp  msg_storage.hpp  overlay.cpp  overlay.hpp  overlay_manager.cpp  overlay_manager.hpp  overlay_manager_view.cpp  overlay_manager_view.hpp  overlay_request.hpp  overlay_time_info.hpp  ratio_layouted_frame.cpp  ratio_layouted_frame.hpp  try_discover_source.cpp  try_discover_source.hpp  user_roles.hpp
rqt_image_overlay/test/: CMakeLists.txt  test_image_manager.cpp  test_list_image_topics.cpp  test_msg_storage.cpp
rqt_image_overlay_layer/: CHANGELOG.rst  CMakeLists.txt  package.xml
rqt_image_overlay_layer/include/rqt_image_overlay_layer/: plugin.hpp  plugin_interface.hpp
scripts/: image_overlay
src/: compositor.cpp  image_manager.cpp  image_overlay.cpp  image_overlay.ui  image_overlay_node.cpp  main.cpp  overlay.cpp  overlay_manager.cpp  plugin.cpp  plugin_manager.cpp  ratio_layouted_frame.cpp
